--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "process-triggers": "node --loader=ts-node/esm util/process_triggers_folder.ts",
     "generate-log-guide": "node --loader=ts-node/esm util/gen_log_guide.ts",
     "validate-versions": "node --loader=ts-node/esm util/validate_versions.ts",
+    "prep-release": "node --loader=ts-node/esm util/set_release_attributes.ts",
     "version": "node --loader=ts-node/esm util/bump_version.ts"
   },
   "devDependencies": {
