--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cactbot",
-  "version": "0.32.0",
-  "releaseSummary": "final test 12345",
+  "version": "0.33.0",
+  "releaseSummary": "final final final",
   "releaseInDraft": "true",
   "license": "Apache-2.0",
   "type": "module",
