--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,8 +28,11 @@ jobs:
         id: check_tag
         shell: bash
         run: |
-          if [ $(git tag -l "v${{ steps.get_version.outputs.version }}") ]; then
-              echo "No version bump - ${{ steps.get_version.outputs.version }}"
+          if [ "${{ steps.get_version.outputs.version }}" == "" ]; then
+            echo "Error: Unable to determine version from package.json"
+            exit 1
+          elif [ $(git tag -l "v${{ steps.get_version.outputs.version }}") ]; then
+              echo "No version bump - ${{ steps.get_version.outputs.version }}.  Skipping remaining jobs..."
           else
               echo "Version bump detected - ${{ steps.get_version.outputs.version }}"
               echo "::set-output name=do_release::true"
