--- a/.github/workflows/workflow-lint.yml
+++ b/.github/workflows/workflow-lint.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run yamllint
         run: |
-          yamllint -c .yamllint.yml -f github .
+          yamllint -c .yamllint.yml -f github .github/workflows
 
       - name: Run workflow lint script
         run: |
