--- a/.github/workflows/label-pr.yml
+++ b/.github/workflows/label-pr.yml
@@ -11,7 +11,14 @@ name: PR Auto Label
 
 on:
   pull_request_target:
-    types: [edited, synchronize, opened, reopened, auto_merge_enabled, auto_merge_disabled]
+    types:
+      - edited
+      - synchronize
+      - opened
+      - reopened
+      - auto_merge_enabled
+      - auto_merge_disabled
+      - ready_for_review
   pull_request_review:
     types: [submitted]
 
@@ -29,6 +36,8 @@ jobs:
               echo "run=auto_merge" >> $GITHUB_OUTPUT
           elif [ "${{ github.event.action }}" == "submitted" ]; then
               echo "run=pr_review" >> $GITHUB_OUTPUT
+          elif [ "${{ github.event.action }}" == "ready_for_review" ]; then
+              echo "run=pr_ready" >> $GITHUB_OUTPUT
           else
               echo "run=push_commit" >> $GITHUB_OUTPUT
           fi
@@ -68,6 +77,18 @@ jobs:
           token: ${{secrets.GITHUB_TOKEN}}
           labels: needs-review
           type: remove
+
+  pr_ready:
+    runs-on: ubuntu-latest
+    needs: job_picker
+    if: needs.job_picker.outputs.run == 'pr_ready'
+    steps:
+      - name: Add needs-review label
+        uses: buildsville/add-remove-label@v2.0.1
+        with:
+          token: ${{secrets.GITHUB_TOKEN}}
+          labels: needs-review
+          type: add
 
   push_commit:
     runs-on: ubuntu-latest
