--- a/.github/workflows/label-pr.yml
+++ b/.github/workflows/label-pr.yml
@@ -19,8 +19,11 @@ on:
       - auto_merge_enabled
       - auto_merge_disabled
       - ready_for_review
-  pull_request_review:
-    types: [submitted]
+  workflow_run:
+    workflows:
+      - PR Review
+    types:
+      - completed
 
 jobs:
   job_picker:
@@ -34,7 +37,7 @@ jobs:
         run: |
           if [ "${{ contains(github.event.action,'auto_merge_') }}" == "true" ]; then
               echo "run=auto_merge" >> $GITHUB_OUTPUT
-          elif [ "${{ github.event.action }}" == "submitted" ]; then
+          elif [ "${{ github.event.action }}" == "completed" ]; then
               echo "run=pr_review" >> $GITHUB_OUTPUT
           elif [ "${{ github.event.action }}" == "ready_for_review" ]; then
               echo "run=pr_ready" >> $GITHUB_OUTPUT
@@ -64,21 +67,23 @@ jobs:
           type: remove
 
   pr_review:
-    permissions:
-      pull-requests: write
     runs-on: ubuntu-latest
     needs: job_picker
     if: needs.job_picker.outputs.run == 'pr_review'
     steps:
-      - name: Remove needs-review label
-        if: >
-          github.event.review.author_association == 'COLLABORATOR' ||
-          github.event.review.author_association == 'OWNER'
-        uses: buildsville/add-remove-label@v2.0.1
+      - uses: actions/checkout@v3
         with:
-          token: ${{secrets.GITHUB_TOKEN}}
-          labels: needs-review
-          type: remove
+          # force to ci checkout main repo to avoid
+          # unexpected PR code to be executed with out github token
+          ref: main
+
+      - uses: ./.github/actions/setup-js-env
+
+      - name: Update PR Review Labels
+        run: |
+          node .github/scripts/pr-review.cjs
+        env:
+          GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
   pr_ready:
     runs-on: ubuntu-latest
