--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "package.json"
   ],
   "scripts": {
-    "build": "webpack --progress --config webpack/webpack.prod.ts",
+    "build": "vite build --config vite/vite.config.ts",
     "build-gh-pages": " webpack --config webpack/webpack.ghpages.ts",
     "start": "webpack serve --config webpack/webpack.dev.ts",
     "fetch-deps": "node --loader=ts-node/esm ./util/fetch_deps.ts",
@@ -59,6 +59,7 @@
     "@babel/preset-typescript": "^7.14.5",
     "@dprint/json": "^0.16.0",
     "@dprint/typescript": "^0.75.0",
+    "@rollup/plugin-virtual": "^3.0.2",
     "@types/argparse": "^1.0.38",
     "@types/chai": "^4.3.1",
     "@types/inquirer": "^7.3.2",
@@ -122,6 +123,7 @@
     "tsconfig-paths": "^3.9.0",
     "ttypescript": "^1.5.15",
     "typescript": "^4.6.4",
+    "vite": "^5.2.12",
     "webpack": "^5.76.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0",
