--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,7 +52,8 @@
     "./resources",
     "./util",
     "./test",
-    "./webpack"
+    "./webpack",
+    "./vite"
   ],
   "exclude": [
     "./eslint",
