--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "ttypescript": "^1.5.15",
     "typescript": "^4.6.4",
     "vite": "^5.2.12",
+    "vite-plugin-checker": "^0.6.4",
     "webpack": "^5.76.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0",
