--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "typescript": "^4.6.4",
     "vite": "^5.2.12",
     "vite-plugin-checker": "^0.6.4",
+    "vite-plugin-static-copy": "^1.0.5",
     "webpack": "^5.76.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0",
