--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
+    "dedent": "^1.5.3",
     "dprint": "^0.40.2",
     "eslint": "^8.26.0",
     "eslint-config-google": "^0.14.0",
