--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "cactbot",
-  "version": "0.32.1",
-  "releaseSummary": "ex1 timeline + triggers",
-  "releaseInDraft": "true",
+  "version": "0.32.2",
+  "releaseSummary": "Job module update + translations",
+  "releaseInDraft": "false",
   "license": "Apache-2.0",
   "type": "module",
   "types": "./types",
