--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "ts-node": {
-    "compiler": "ttypescript",
     "moduleTypes": {
       "webpack/*": "cjs",
       // Globs are also supported with the same behavior as tsconfig "include"
@@ -9,13 +8,6 @@
     "esm": true
   },
   "compilerOptions": {
-    "plugins": [
-      {
-        "transform": "@zoltu/typescript-transformer-append-js-extension/output/index.js",
-        "after": true
-      }
-    ],
-
     "target": "ES2022",
     "module": "ES2022",
     "allowJs": true,
@@ -25,7 +17,7 @@
     "types": [
       "node"
     ],
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "skipLibCheck": false,
     "esModuleInterop": true,
     "rootDir": "./",
